-Xlog:help "=debug" example is not quite accurate

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 10
    • Component/s: hotspot
    • b04
    • generic
    • generic

      In this snippet of -Xlog:help output:

       -Xlog:gc+ref=debug
               Log messages tagged with both 'gc' and 'ref' tags, using 'debug' level, to stdout, with default decorations.
               (Messages tagged only with one of the two tags will not be logged.)

      The "using 'debug' level" part is accurate only if there are no
      calls to log_info(gc, ref)("...") in the system. David Holmes
      suggested that this wording might be better:

          "using 'debug' level" => "using up to 'debug' level"

      and I agree that would be a more inclusive statement
      since we could have output at the "error", "warning",
      "info" and "debug" levels in the above example.

            Assignee:
            Marcus Larsson (Inactive)
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: