8187066: -Xlog:help "=debug" example is not quite accurate

Reviewed-by: hseigel